Add main deployment ci/cd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,12 @@ services:
     volumes:
       - /app/node_modules # don't overwrite the containers app module on changes
       - .:/app # map changes from root of local machine to the /app folder
-  # web-react-app-test:
-  #   build:
-  #     context: .
-  #     dockerfile: ${DOCKER_FILE}
-  #   volumes:
-  #     - /app/node_modules # don't overwrite the containers app module on changes
-  #     - .:/app # map changes from root of local machine to the /app folder
-  #   command: ["npm", "run", "test"]
+  tests:
+    stdin_open: true # attach to stdin
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /app/node_modules
+      - .:/app
+    command: ["npm", "run", "test"]
